--- a/BIBLIO/BIBLIO.csproj
+++ b/BIBLIO/BIBLIO.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddNewUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddNewUser.Designer.cs">
+      <DependentUpon>AddNewUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Calculator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,24 @@
     </Compile>
     <Compile Include="delete.Designer.cs">
       <DependentUpon>delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DeleteUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteUser.Designer.cs">
+      <DependentUpon>DeleteUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditUserPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUserPassword.Designer.cs">
+      <DependentUpon>EditUserPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditUserType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUserType.Designer.cs">
+      <DependentUpon>EditUserType.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -106,11 +130,23 @@
     <Compile Include="Table1_Insertcs.Designer.cs">
       <DependentUpon>Table1_Insertcs.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddNewUser.resx">
+      <DependentUpon>AddNewUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Calculator.resx">
       <DependentUpon>Calculator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="delete.resx">
       <DependentUpon>delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleteUser.resx">
+      <DependentUpon>DeleteUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUserPassword.resx">
+      <DependentUpon>EditUserPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUserType.resx">
+      <DependentUpon>EditUserType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
